# wificitylogin

./: .bumpversion.cfg  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  wificitylogin.py
.github/workflows/: docker.yml  pypi.yml
